--- a/2017/IntroducaoALogica/Atividade_12-04/document.tex
+++ b/2017/IntroducaoALogica/Atividade_12-04/document.tex
@@ -25,6 +25,9 @@
 	    		\item I[p]=V e I[q]=F
 	    		\item Impossível dar falso, já que sempre um será verdadeiro.
 	    		\item I[p]=V e I[q]=F; I[p]=F e I[q]=V
+	    		\item I[p]=V e I[q]=F; I[p]=V e I[q]=V; I[p]=F e I[q]=F;
+	    		\item Impossível dar falso.
+	    		\item I[\alpha]=?
 	    		  
 	  		\end{enumerate}
 	\end{enumerate}
