Resposta do exercício 1

--- a/2017/IntroducaoALogica/Atividade_12-04/document.tex
+++ b/2017/IntroducaoALogica/Atividade_12-04/document.tex
@@ -27,9 +27,16 @@
 	    		\item I[p]=V e I[q]=F; I[p]=F e I[q]=V
 	    		\item I[p]=V e I[q]=F; I[p]=V e I[q]=V; I[p]=F e I[q]=F;
 	    		\item Impossível dar falso.
-	    		\item I[\alpha]=?
-	    		  
+	    		\item Se I[p]=V : I[$\alpha$]=V, I[$\beta$]=V, I[$\gamma$]=V,
+	    		I[$\lambda$]=V.\newline Se I[p]=F : I[$\alpha$]=V, I[$\beta$]=F,
+	    		I[$\gamma$]=V, I[$\lambda$]=F.
+	    		
+	    		\item Se I[q]=V : I[$\alpha$]=V, I[$\beta$]=V, I[$\gamma$]=V,
+	    		I[$\lambda$]=V.\newline Se I[q]=F : I[$\alpha$]=F, I[$\beta$]=F,
+	    		I[$\gamma$]=V, I[$\lambda$]=V.
 	  		\end{enumerate}
+	  \item \begin{enumerate}
+	    \item 
+	  \end{enumerate}
 	\end{enumerate}
-
 \end{document}
